--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -35,6 +35,12 @@
     <dimen name="avatar_width">48dp</dimen>
 
 
+    <dimen name="listed_setting_item_height">48dp</dimen>
+    <dimen name="listed_setting_item_text_height">20dp</dimen>
+    <dimen name="listed_input_item_width">72dp</dimen> <!-- 3x 72dp -->
+
+
+
 
 
 
