--- a/res/layout/contact_detail_fragment.xml
+++ b/res/layout/contact_detail_fragment.xml
@@ -361,20 +361,35 @@
                         android:gravity="center"
                         android:textColor="@color/off_white_1" />
 
-                    <TextView
+                    <FrameLayout
                         android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="textMultiLine"
-                        android:id="@+id/notes_view"
-                        android:layout_gravity="center_horizontal"
-                        android:hint="  ..."
-                        android:minLines="6"
-                        android:gravity="start"
-                        android:textIsSelectable="false"
-                        android:background="@android:drawable/alert_light_frame"
-                        android:textColorLink="@color/holo_blue"
-                        android:padding="15dp"
-                        style="@style/AppTheme" />
+                        android:layout_height="fill_parent">
+
+                        <TextView
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/notes_view"
+                            android:layout_gravity="center_horizontal"
+                            android:hint="  ..."
+                            android:minLines="6"
+                            android:gravity="start"
+                            android:textIsSelectable="true"
+                            android:background="@android:drawable/alert_light_frame"
+                            android:textColorLink="@color/holo_blue"
+                            android:padding="@dimen/padding"
+                            style="@style/AppTheme"
+                            android:longClickable="true" />
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/edit_notes_icon"
+                            android:src="@drawable/ic_action_edit"
+                            android:alpha="0.5"
+                            android:importantForAccessibility="yes"
+                            android:layout_gravity="right"
+                            android:padding="10dp" />
+                    </FrameLayout>
 
                 </LinearLayout>
 
