--- a/res/layout/notes_editor_fragment.xml
+++ b/res/layout/notes_editor_fragment.xml
@@ -51,184 +51,150 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
 
-        <LinearLayout
-            android:orientation="vertical"
+        <ScrollView
             android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_weight=".9">
+            android:layout_height="wrap_content"
+            android:id="@+id/scrollView"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:layout_rowSpan="4"
+            android:fillViewport="false"
+            android:layout_marginLeft="@dimen/listview_item_padding"
+            android:layout_marginRight="@dimen/listview_item_padding">
 
-            <ScrollView
-                android:layout_width="fill_parent"
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/scrollView"
-                android:layout_row="0"
-                android:layout_column="0"
-                android:layout_rowSpan="4"
-                android:fillViewport="false"
-                android:layout_marginLeft="@dimen/listview_item_padding"
-                android:layout_marginRight="@dimen/listview_item_padding">
+                android:divider="@android:drawable/divider_horizontal_textfield">
+
+                <!--android:inputType="phone"
+                android:inputType="textEmailAddress"-->
 
 
                 <LinearLayout
                     android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:divider="@android:drawable/divider_horizontal_textfield">
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:layout_marginTop="@dimen/list_padding"
+                    android:layout_marginBottom="64dp">
 
-                    <!--android:inputType="phone"
-                    android:inputType="textEmailAddress"-->
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
+                        android:text="Update"
+                        android:id="@+id/event_notes_title" />
 
-
-                    <LinearLayout
-                        android:orientation="vertical"
+                    <EditText
                         android:layout_width="fill_parent"
-                        android:layout_height="fill_parent"
-                        android:layout_marginTop="@dimen/list_padding">
+                        android:layout_height="wrap_content"
+                        android:inputType="textMultiLine"
+                        android:id="@+id/event_notes"
+                        android:layout_gravity="center_horizontal"
+                        android:hint="Say something positive."
+                        android:gravity="start"
+                        android:textIsSelectable="false"
+                        android:paddingStart="@dimen/padding"
+                        android:padding="@dimen/padding"
+                        android:paddingTop="32dp" />
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:id="@+id/imageView3"
+                        android:background="@drawable/rectangle"
+                        android:layout_gravity="left" />
+
+                    <FrameLayout
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
-                            android:text="Update"
-                            android:id="@+id/event_notes_title" />
-
-                        <EditText
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content"
-                            android:inputType="textMultiLine"
-                            android:id="@+id/event_notes"
-                            android:layout_gravity="center_horizontal"
-                            android:hint="Say something positive."
-                            android:gravity="start"
-                            android:textIsSelectable="false"
-                            android:paddingStart="@dimen/padding"
-                            android:padding="@dimen/padding"
-                            android:paddingTop="32dp" />
+                            android:textAppearance="?android:attr/textAppearanceSmall"
+                            android:id="@+id/event_note_character_count_view"
+                            android:alpha="0.5"
+                            android:layout_gravity="right"
+                            android:layout_marginTop="@dimen/nibble"
+                            android:layout_marginLeft="@dimen/padding" />
 
                         <ImageView
-                            android:layout_width="match_parent"
-                            android:layout_height="2dp"
-                            android:id="@+id/imageView3"
-                            android:background="@drawable/rectangle"
-                            android:layout_gravity="left" />
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/update_notes_icon"
+                            android:src="@drawable/ic_action_save"
+                            android:alpha="0.5"
+                            android:importantForAccessibility="yes"
+                            android:layout_gravity="center_horizontal"
+                            android:contentDescription="Save update text to contact notes" />
 
-                        <FrameLayout
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content">
+                        <CheckBox
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Add Date"
+                            android:id="@+id/add_date_check_box"
+                            android:layout_gravity="left"
+                            android:alpha="0.5" />
+                    </FrameLayout>
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:textAppearance="?android:attr/textAppearanceSmall"
-                                android:id="@+id/event_note_character_count_view"
-                                android:alpha="0.5"
-                                android:layout_gravity="left"
-                                android:layout_marginTop="@dimen/nibble"
-                                android:layout_marginLeft="@dimen/padding" />
+                </LinearLayout>
 
-                            <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:id="@+id/update_notes_icon"
-                                android:src="@drawable/ic_action_add"
-                                android:alpha="0.5"
-                                android:importantForAccessibility="yes"
-                                android:layout_gravity="right" />
-                        </FrameLayout>
+                <LinearLayout
+                    style="@style/contact_detail_item_background"
+                    android:orientation="vertical"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/linearLayout"
+                    android:layout_marginTop="@dimen/list_item_vertical_padding" >
 
-                    </LinearLayout>
-
-                    <LinearLayout
-                        style="@style/contact_detail_item_background"
-                        android:orientation="vertical"
-                        android:layout_width="fill_parent"
+                    <TextView
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/linearLayout"
-                        android:layout_marginTop="@dimen/list_item_vertical_padding" >
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:text="@string/notes_title"
+                        android:id="@+id/textView2"
+                        android:textAlignment="center"
+                        android:layout_gravity="center_horizontal"
+                        android:textStyle="bold"
+                        android:gravity="center"
+                        android:textColor="@color/off_white_1" />
+
+                    <FrameLayout
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent" >
 
                         <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:textAppearance="?android:attr/textAppearanceLarge"
-                            android:text="@string/notes_title"
-                            android:id="@+id/textView2"
-                            android:textAlignment="center"
-                            android:layout_gravity="center_horizontal"
-                            android:textStyle="bold"
-                            android:gravity="center"
-                            android:textColor="@color/off_white_1" />
-
-                        <FrameLayout
+                            style="@style/AppTheme"
                             android:layout_width="fill_parent"
-                            android:layout_height="fill_parent" >
+                            android:layout_height="wrap_content"
+                            android:id="@+id/contact_notes_view"
+                            android:layout_gravity="center_horizontal"
+                            android:hint="  ..."
+                            android:minLines="6"
+                            android:gravity="start"
+                            android:textIsSelectable="true"
+                            android:background="@android:drawable/alert_light_frame"
+                            android:padding="@dimen/padding"
+                            android:longClickable="true" />
 
-                            <TextView
-                                style="@style/AppTheme"
-                                android:layout_width="fill_parent"
-                                android:layout_height="wrap_content"
-                                android:id="@+id/contact_notes_view"
-                                android:layout_gravity="center_horizontal"
-                                android:hint="  ..."
-                                android:minLines="6"
-                                android:gravity="start"
-                                android:textIsSelectable="true"
-                                android:background="@android:drawable/alert_light_frame"
-                                android:padding="@dimen/padding"
-                                android:longClickable="true" />
-
-                            <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:id="@+id/save_notes_button"
-                                android:src="@drawable/ic_action_edit"
-                                android:alpha="0.5"
-                                android:importantForAccessibility="yes"
-                                android:layout_gravity="right"
-                                android:padding="10dp" />
-                        </FrameLayout>
-                    </LinearLayout>
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/save_notes_button"
+                            android:src="@drawable/ic_action_edit"
+                            android:alpha="0.5"
+                            android:importantForAccessibility="yes"
+                            android:layout_gravity="right"
+                            android:padding="10dp"
+                            android:visibility="gone" />
+                    </FrameLayout>
                 </LinearLayout>
-            </ScrollView>
+            </LinearLayout>
+        </ScrollView>
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_row="4"
-            android:layout_column="0"
-            android:layout_marginLeft="@dimen/listview_item_padding"
-            android:layout_marginRight="@dimen/listview_item_padding">
-
-            <ImageButton
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/save_button"
-                android:baselineAlignBottom="false"
-                android:contentDescription="Save New Event"
-                android:cropToPadding="true"
-                android:src="@android:drawable/ic_input_add"
-                android:clickable="true"
-                android:layout_weight=".5"
-                android:layout_marginTop="@dimen/padding"
-                android:layout_marginBottom="@dimen/padding"
-                android:layout_marginRight="@dimen/padding" />
-
-            <ImageButton
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/cancel_button"
-                android:cropToPadding="false"
-                android:contentDescription="Cancel New Event"
-                android:clickable="true"
-                android:src="@android:drawable/ic_delete"
-                android:layout_weight=".5"
-                android:layout_marginTop="@dimen/padding"
-                android:layout_marginBottom="@dimen/padding"
-                android:layout_marginLeft="@dimen/padding" />
-
-        </LinearLayout>
     </LinearLayout>
 
 </FrameLayout>
